apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        supplementalGroups:
          - 44    # video group - access to /dev/dri/card0
          - 992   # render group - access to /dev/dri/renderD128
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest@sha256:155fb51c745d1a2c28c8b300612bc728a5dd06097bbc62b8b1c76d174eb20366
          securityContext:
            privileged: true
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: dri
              mountPath: /dev/dri
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "16Gi"
              cpu: "4"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
